feat: jwt token security ver1.0